fix(server, benchmarks): stabilize ApplicationConfig resolution and HighPrecisionComplianceTest. Add fixes for RealDoubleCARMABenchmark/Test.